--- a/bower.json
+++ b/bower.json
@@ -1,10 +1,10 @@
 {
-  "name": "foundation-ssg",
+  "name": "npc",
   "version": "1.0.0",
   "authors": [
-    "ZURB <foundation@zurb.com>"
+    "schrags08 <schrags08@hotmail.com>"
   ],
-  "description": "Static site generator for Foundation for Sites.",
+  "description": "Static site generator for the Neighborhood Pub Crawl website.",
   "main": "gulpfile.js",
   "license": "MIT",
   "ignore": [
@@ -15,8 +15,7 @@
     "tests"
   ],
   "dependencies": {
-    "foundation-sites": "~6.2.3",
-    "motion-ui": "~1.2.2"
+    "foundation-sites": "~6.2.3"
   },
   "private": true
 }
