WIP - build out site - clean up globals - add helpers - add easter egg - add images

--- a/bower.json
+++ b/bower.json
@@ -15,7 +15,8 @@
     "tests"
   ],
   "dependencies": {
-    "foundation-sites": "~6.2.3"
+    "foundation-sites": "~6.2.3",
+    "konami-js": "^1.4.6"
   },
   "private": true
 }
