--- a/package.json
+++ b/package.json
@@ -42,7 +42,12 @@
     "email": "foundation@zurb.com"
   },
   "babel": {
-    "presets": ["es2015"]
+    "presets": [
+      "es2015"
+    ]
   },
-  "private": true
+  "private": true,
+  "dependencies": {
+    "moment": "^2.15.1"
+  }
 }
