--- a/package.json
+++ b/package.json
@@ -42,9 +42,7 @@
     "email": "foundation@zurb.com"
   },
   "babel": {
-    "presets": [
-      "es2015"
-    ]
+    "presets": ["es2015"]
   },
   "private": true,
   "dependencies": {
